# FastAPI-demo-API-using-ML-with-improvement

./: Dockerfile  main.py  pyproject.toml  requirements.txt
Model/: model.pkl  predict.py
config/: city_tier.py
schema/: api_response.py  user_input.py
